# synergy_task_refs

./: .envfile  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml
data/: data.json
src/: pyproject.toml
src/synergy_refs/: manage.py
src/synergy_refs/refs/: apps.py  entities.py  graph_loader.py  mappers.py  models.py  service.py  tests.py  urls.py  utils.py  views.py
src/synergy_refs/refs/migrations/: 0001_initial.py
src/synergy_refs/synergy_refs/: asgi.py  settings.py  urls.py  wsgi.py
