[tool.poetry]
name = "synergy_refs"
version = "0.1.0"
description = ""
authors = ["Anton Novikov <thescir@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
